# 235Labs

ESP32Project/swimming/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32Project/swimming/Python GUI Script/: swimming.py
ESP32Project/swimming/main/: CMakeLists.txt  main.cpp
Lab 2/: Design Challenge _ HW2 V1.vi  Design Challenge _ HW2 V2.vi
Lab 2/Deliverables/: Previous Element Sum.vi
Lab 2/design challenge_doesnt work/: Design_Yiran.vi
Lab 3/: color_enums.ctl
Lab1/: Circle Area Perimeter.vi  Match.vi  Max Search.vi  Quadratic Roots.vi  Random Competition.vi
Lab3/: Monty_Hall_Yiran.vi
Lab3/Simon/: Simon VI.vi
Project/: docker commands master.txt  imu_processing.cpp  imu_processing.h  platformio.ini  try2.cpp
Project/Python Gui Scripts/: imu_line_viewer.py  main.py  swimming.py  visualizer_3d.py
Project/Python Gui Scripts/archive/: KP_3D_two_sensors.py  lateral_raise_gui.py  lateral_raise_gui_3D.py
Project/src/main.ino/: gui_display.py  main.ino.ino  mpu9250_controller.cpp  mpu9250_controller.hpp  test.py
projects/: CMakeLists.txt  platformio.ini
projects/CAD/: Upper Neck v3.stl  lower back shelf v3.stl
projects/GUI Test Scrips/: ble_telemetry_reader.py
projects/Python Gui Scripts/: lateralraise2d.py  smoothing.py  swimming.py  test.py
projects/Python Gui Scripts/archive/: lateral_raise_gui_2D.py
projects/archive/: backup_main.cpp  i2cdetect.cpp
projects/archive/SD_Test/: SD_Test.ino
projects/src/: main.cpp  main.ino
